fix wave contrast mistake.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -181,7 +181,7 @@ h1{
   margin-top: 1em;
   padding: 0.75em 2em;
   background-color: var(--secondary-color);
-  color: white;
+  color: var(--primary-color);
   border: none;
   border-radius: 5px;
   font-size: 1em;
@@ -192,6 +192,7 @@ h1{
 
 .hero-btn:hover {
   background-color: var(--primary-color);
+  color: var(--thirty-color);
 }
 
 /******* Upgrades and Reviews Section ***************/
